--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         }
     ],
     "require": {
-        "php": "^8.0"
+        "php": "^8.0",
+        "brian2694/laravel-toastr": "^5.59"
     },
     "autoload": {
         "psr-4": {
