--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
     ],
     "require": {
         "php": "^8.0",
-        "brian2694/laravel-toastr": "^5.59"
+        "brian2694/laravel-toastr": "^5.59",
+        "guzzlehttp/guzzle": "^7.9"
     },
     "autoload": {
         "psr-4": {
